--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
     "lib": [
-      "es2021"
+      "esnext"
     ],
     "module": "commonjs",
-    "target": "es2021",
+    "target": "esnext",
     "watch": true,
     "outDir": "build",
     "noImplicitAny": true,
     "moduleResolution": "node",
-    "sourceMap": true
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "strict": true
   },
   "include": [
     "src/**/*"
