--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   ],
   "license": "mpl-2.0",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-rate-limit": "^6.2.0",
