--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-rate-limit": "^6.2.0",
-    "joi": "^17.5.0"
+    "joi": "^17.5.0",
+    "pg": "^8.7.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.12",
+    "@types/pg": "^8.6.4",
+    "dotenv": "^15.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
